# deepland

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  cleanup.sh  conanfile.txt  setup.py
deepland/: __init__.py
deepland/models/: cnn.py  lstm.py  ml.py  tcn.py
deepland/utils/: datasets.py  earthengine.py
include/: classes.h  ops.h
src/: bindings_classes.cc  bindings_ops.cc  classes.cc  ops.cc
tests/: classes_test.cc  classes_test.py  ops_test.cc  ops_test.py  test_cc.py  tests_main.cc
